--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-requests~=2.32.4
 python-telegram-bot==13.15
-openai~=1.98.0
-peewee~=3.18.2
-python-dotenv~=1.1.1
-
-pyTelegramBotAPI~=4.27.0
+urllib3==1.26.18
+requests>=2.31
+python-dotenv>=1.0.1
+peewee>=3.17
+psycopg2-binary>=2.9
+openai>=1.40
+playhouse>=0.5.3
