--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ requests>=2.31
 urllib3==1.26.18
 python-dotenv>=1.0.1
 peewee>=3.17
-psycopg2-binary>=2.9
+psycopg2-binary==2.9.9
 openai>=1.40
 playhouse>=0.5.3
+
